[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/images/pw_life_explote_4.png" type="Texture" id=1]
[ext_resource path="res://assets/images/pw_life_explote_3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/pw_life_explote_2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/pw_life_explote_5.png" type="Texture" id=4]
[ext_resource path="res://assets/images/pw_life_explote_1.png" type="Texture" id=5]
[ext_resource path="res://scripts/ExtraLife.gd" type="Script" id=7]
[ext_resource path="res://assets/images/pw_life_3.png" type="Texture" id=8]
[ext_resource path="res://assets/images/pw_life_1.png" type="Texture" id=9]
[ext_resource path="res://assets/images/pw_life_2.png" type="Texture" id=10]
[ext_resource path="res://assets/images/pw_life_4.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 5.04593

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": false,
"name": "toked",
"speed": 10.0
} ]

[node name="ExtraLife" type="Area2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.579552, 0.210224 )
frames = SubResource( 2 )
animation = "idle"

[node name="TimeToGo" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="TimerOut" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="timeout" from="TimeToGo" to="." method="_on_TimeToGo_timeout"]
[connection signal="timeout" from="TimerOut" to="." method="_on_TimerOut_timeout"]
